feat: UI 통합 및 중앙화된 Linear 테마 적용

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EA Plan 05</title>
-    <meta name="description" content="AI-Powered Enterprise Architecture Management Platform" />
+    <title>ELUO project</title>
+    <meta name="description" content="AI 기반 통합 프로젝트 관리 시스템 - ELUO" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
